nice rotating links and underlined resume and email. save before fixing bottom links flickering

--- a/docs/css/contact.css
+++ b/docs/css/contact.css
@@ -103,13 +103,39 @@
 }
 
 
-.links a {
-  /* background: white; */
+#contact-info .links a {
   position: relative;
-  transform: rotate(-35deg) skew(20deg);
+  /* transform: rotate(-35deg) skew(20deg); */
   display: block;
-  width: 40px; 
-  height: 40px;
+  width: 55px; 
+  height: 55px;
+  transition: transform .3s;
+  /* color: var(--color-orange); */
+  /* border: 1px solid white; */
+  /* border-radius: 2px; */
+
+  /* display: flex;
+  justify-content: center; */
+}
+
+/* #contact-info .links a::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 1px solid yellow;
+}
+#contact-info .links a:hover::after {
+  transform: rotate(35deg) skew(-20deg);
+} */
+
+
+#contact-info .links a:hover {
+  /* border-color: transparent; */
+  transform: rotate(-35deg) skew(20deg);
+
 }
 
 .links a span {
@@ -118,8 +144,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: yellow;
   transition: 0.5s;
+  border: 1px solid var(--color-orange);
+  /* border: 1px solid var(--color-bright); */
+  border-radius: 5px;
 }
 
 .links a span:nth-child(5) {
@@ -128,12 +156,19 @@
   align-items: center;
 
   position: relative;
+  border-color: var(--color-bright);
+
   /* display: block; */
 }
+
+/* .links a span {
+  border: 1px solid var(--color-orange);
+} */
 
 .links a:hover span:nth-child(5) {
   transform: translate(20px, -20px);
   opacity: 1;
+
 }
 .links a:hover span:nth-child(4) {
   transform: translate(15px, -15px);
@@ -151,12 +186,33 @@
   opacity: .2;
 }
 
-.links a span {
-  /* background: var(--color-orange);
-  color: var(--color-bright); */
+/* .links a:hover span:nth-child(5) {
+  transform: translate(8px, -20px);
+  opacity: 1;
+}
+.links a:hover span:nth-child(4) {
+  transform: translate(6px, -15px);
+  opacity: .8;
+}
+.links a:hover span:nth-child(3) {
+  transform: translate(4px, -10px);
+  opacity: .6;
+}
+.links a:hover span:nth-child(2) {
+  transform: translate(2px, -5px);
+  opacity: .4;
+}
+.links a:hover span:nth-child(1) {
+  opacity: .2;
+} */
 
-  background: var(--color-bright);
-  color: var(--color-orange);
+.links a:hover span {
+  /* background: var(--color-orange); */
+  color: var(--color-bright);
+
+}
+.links a span:nth-child(5) {
+  /* background: var(--body-background-color); */
 }
 
 #contact-info a {
@@ -191,5 +247,5 @@
 }
 
 #copy-email::after {
-  content: 'COPY'
+  content: 'COPY';
 }
